# voxweave

./: .gitignore  CLI_VIDEO_GENERATION.md  COQUI_TTS_IMPLEMENTATION.md  COQUI_USAGE_GUIDE.md  Cargo.toml  EXECUTION_STATUS.md  FIXES_APPLIED.md  FUNCTIONAL_TESTING_EXECUTION_REPORT.md  IMPLEMENTATION_SUMMARY.md  KOKORO_RESOLUTION.md  KOKORO_TROUBLESHOOTING.md  QUICKSTART.md  README.md  SUBTITLE_IMPROVEMENTS.md  VIDEO_CLI_IMPLEMENTATION.md  VIDEO_CLI_QUICKREF.md  abagen_overview.srt  abagen_overview.txt  build.sh  generate_video.sh  requirements.txt  run_demo.sh  test_coqui.py  test_gesture_control.sh  test_output.txt  verify.sh  verify_kokoro_setup.sh
.qoder/quests/: desktop-ui-fixes.md  functional-testing-gesture-control-verification.md  model-configuration.md  tts-to-voice-recording.md  ui-ux-rewrite.md  unknown-task.md  video-processing-cleanup.md  video-production-teleprompter.md
.qoder/repowiki/en/content/: Configuration Management.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Core Library API.md  Processing Pipeline API.md  Video Generation Service API.md
.qoder/repowiki/en/content/API Reference/Text-to-Speech Engine API/: CoquiTTS Engine API.md  Core TTS Interface.md  TTS Engine Bridge Scripts.md  Text-to-Speech Engine API.md
.qoder/repowiki/en/content/Advanced Features/: Advanced Features.md  Batch Operations.md  Performance Optimization.md  Queue Processing.md
.qoder/repowiki/en/content/CLI Usage/: CLI Usage.md  Convert Command.md  List Voices Command.md
.qoder/repowiki/en/content/CLI Usage/Video Command/: Custom Prompts.md  Output Formats.md  Resolution Options.md  Video Command.md  Video Styles.md
.qoder/repowiki/en/content/Development Guide/: Contributing Process.md  Development Guide.md
.qoder/repowiki/en/content/Development Guide/Code Structure/: Code Structure.md
.qoder/repowiki/en/content/Development Guide/Testing Strategy/: Integration Testing.md  Testing Strategy.md  Testing with External Services.md  Unit Testing.md
.qoder/repowiki/en/content/Installation & Setup/: Environment Configuration.md  Installation & Setup.md  Prerequisites.md
.qoder/repowiki/en/content/Installation & Setup/Building the Project/: Building the CLI Application.md  Building the Project.md
.qoder/repowiki/en/content/Project Overview/: Project Overview.md
.qoder/repowiki/en/content/Project Overview/Architecture/: Architecture.md
.qoder/repowiki/en/content/Project Overview/Core Functionality/: Core Functionality.md  Text Processing.md
.qoder/repowiki/en/content/Project Overview/User Workflows/: CLI Workflow.md  UI Workflow.md  User Workflows.md
.qoder/repowiki/en/content/Technology Stack & Dependencies/: Feature Flags & Conditional Compilation.md  Python Integration & TTS Bridges.md  Rust Dependencies.md  System Requirements & External Tools.md  Technology Stack & Dependencies.md
.qoder/repowiki/en/content/Text-to-Speech Engine Guide/: CoquiTTS Engine and Voice Cloning.md  Espeak Engine Integration.md  Kokoro Engine Bridge.md  Text-to-Speech Engine Guide.md
.qoder/repowiki/en/content/Troubleshooting/: Configuration and Environment Issues.md  Setup and Installation Issues.md  Troubleshooting.md
.qoder/repowiki/en/content/Troubleshooting/Performance and Resource Issues/: CPU and Memory Usage Optimization.md  GPU Detection and Acceleration Issues.md  (+2 more)
.qoder/repowiki/en/content/UI Application Guide/: Component Architecture.md  UI Application Guide.md
.qoder/repowiki/en/content/Video Generation/: CLI and UI Implementation.md  Custom Prompts.md  Resolutions and Formats.md  Subtitle Embedding.md  Video Generation.md  Video Styles.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
abogen-ui/: BUILD_STATUS.md  Cargo.toml  README.md  STATUS.md  VIDEO_INTEGRATION_PLAN.md  ZAI_VIDEO_FEATURE.md
abogen-ui/apps/desktop/: Cargo.toml
abogen-ui/apps/mobile/: Cargo.toml
abogen-ui/apps/web/: Cargo.toml  Trunk.toml  index.html
abogen-ui/apps/web/src/: main.rs
abogen-ui/crates/ui/: Cargo.toml  lib.rs  state.rs  theme.rs
abogen-ui/crates/ui/components/: audio_recorder.rs  checkbox.rs  combo.rs  drop_zone.rs  gesture_control.rs  header.rs  log_panel.rs  mod.rs  neon_button.rs  output_configuration.rs  progress_bar.rs  queue_modal.rs  recording_screen.rs  slider.rs  teleprompter.rs  video_configuration.rs  voice_selector.rs
abogen-ui/crates/ui/services/: aliyun_video.rs  file_picker.rs  gpu_probe.rs  mlt_video.rs  mod.rs  tts_service.rs  tts_stub.rs  video_generation.rs  voices.rs  zai_video.rs
abogen-ui/crates/ui/tests/: gesture_control_tests.rs  mod.rs  state_tests.rs
python/: kokoro_bridge.py
samples/: example.txt  long_example.md
samples/output/: example.srt  long_example.srt
src/: aliyun_video.rs  config.rs  coqui_tts.rs  lib.rs  main.rs  mlt.rs  package.rs  pipeline.rs  queue.rs  sanitize.rs  subtitle.rs  text.rs  tts.rs  video.rs  zai_video.rs
tests/: coqui_integration.rs
(+83 files in other folders)
