[package]
name = "voxweave"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zip = "0.6"
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
coqui-tts = []
video-generation = ["reqwest", "tokio"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
