[package]
name = "abogen-ui"
version.workspace = true
edition.workspace = true

[lib]
name = "abogen_ui"
path = "lib.rs"

[dependencies]
dioxus = { workspace = true, features = ["web", "desktop", "mobile"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "multipart"], optional = true }
anyhow = "1"
directories = "5"
voxweave = { path = "../../..", features = ["coqui-tts"] }
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }

[features]
default = []
gpu = []
real-tts = []
video-generation = ["reqwest"]
zai-video = ["reqwest", "video-generation"]
coqui-tts = ["cpal", "hound"]

[[test]]
name = "state_tests"
path = "tests/state_tests.rs"

